--- a/index.html
+++ b/index.html
@@ -2,13 +2,50 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Houston Floodwaters</title>
     <link rel="stylesheet" type="text/css" href="multiline.css">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="sticky-footer-navbar.css" rel="stylesheet">
     <script src="http://d3js.org/d3.v3.js" charset="utf-8"></script>
     <!--<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>-->
 </head>
 <body>
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+      <a class="navbar-brand" href="#">Doctorados en el exterior</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+      </div>
+    </nav>
+
+    <!-- Begin page content -->
+    <div class="container">
+      <div class="mt-3">
+        <h1>Inundaciones en Houston </h1>
+      </div>
+      <p class="lead"> Según información pública de Colciencias, "economía" es el doctorado en el exterior más buscado por aquellos que aplican a una beca en esta entidad. El Top 5 de los doctorados más solicitados por los colombianos fue: <br> 1. Economía, 2. Derecho, 3. Ecología, 4. Ingeniería eléctrica 5. Ciencia política.
+
+    </p>
+
 <div class="chart-wrapper" id="chart-line1"></div>
+
+      <p class="lead"> El género es determinante en algunos de los posgrados. Por ejemplo <code id="hombre"> Ingeniería mecánica, Ciencias de la computación, Física e Ingeniería aeroespacial </code> cuentan con más del 75% de la población masculina, mientras que <code id="mujer"> Ecología, biología, antropología, educación y medicina</code> tienen un mayor porcentaje de mujeres.</p>
+
+    <div id="figure" style="margin-bottom: 0px;"></div>
+
+     <p class="lead"> Entre el 2010 y el 2016 se presentaron 3183 personas, es decir en promedio 44 al mes. <code id="mujer">1845 mujeres </code> y <code id="hombre">1338 hombres </code>.</p>
+      <svg class="chart3"></svg>
+
+
+
+
+
+
+
+    </div>
+
 
 <script type="text/javascript">
     d3.csv('multiline_data.csv', function(error, data) {
