--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- Fixed navbar -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="#">Doctorados en el exterior</a>
+      <a class="navbar-brand" href="#">Houston Floodwaters</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -25,24 +25,16 @@
       <div class="mt-3">
         <h1>Inundaciones en Houston </h1>
       </div>
-      <p class="lead"> Según información pública de Colciencias, "economía" es el doctorado en el exterior más buscado por aquellos que aplican a una beca en esta entidad. El Top 5 de los doctorados más solicitados por los colombianos fue: <br> 1. Economía, 2. Derecho, 3. Ecología, 4. Ingeniería eléctrica 5. Ciencia política.
+      <p class="lead"> Se presenta una visualización ficticia de las inundaciones en Houston TX.
 
     </p>
 
+<h1 align="center" id="day"> Day: 1 </h1>
 <div class="chart-wrapper" id="chart-line1"></div>
 
-      <p class="lead"> El género es determinante en algunos de los posgrados. Por ejemplo <code id="hombre"> Ingeniería mecánica, Ciencias de la computación, Física e Ingeniería aeroespacial </code> cuentan con más del 75% de la población masculina, mientras que <code id="mujer"> Ecología, biología, antropología, educación y medicina</code> tienen un mayor porcentaje de mujeres.</p>
-
-    <div id="figure" style="margin-bottom: 0px;"></div>
+      <p class="lead"> Se representa el nivel del agua sobre la ciudad para cada uno de los barrios. El nivel de cada barrio se calcula a partir del promedio de las mediciones de los desagües del barrio. Se tomaron mediciones cada hora a partir de la hora 0 (momento en el que arribó el huracán a la costa).</p>
 
      <p class="lead"> Entre el 2010 y el 2016 se presentaron 3183 personas, es decir en promedio 44 al mes. <code id="mujer">1845 mujeres </code> y <code id="hombre">1338 hombres </code>.</p>
-      <svg class="chart3"></svg>
-
-
-
-
-
-
 
     </div>
 
@@ -50,19 +42,19 @@
 <script type="text/javascript">
     d3.csv('multiline_data.csv', function(error, data) {
     data.forEach(function (d) {
-        d.year = +d.year;
+        d.hour = +d.hour;
         d.variableA = +d.variableA;
         d.variableB = +d.variableB;
         d.variableC = +d.variableC;
         d.variableD = +d.variableD;
     });
 
-    var chart = makeLineChart(data, 'year', {
-        'Variable A': {column: 'variableA'},
-        'Variable B': {column: 'variableB'},
-        'Variable C': {column: 'variableC'},
-        'Variable D': {column: 'variableD'}
-    }, {xAxis: 'Years', yAxis: 'Amount'});
+    var chart = makeLineChart(data, 'hour', {
+        'Downtown Houston': {column: 'variableA'},
+        'Kingwood': {column: 'variableB'},
+        'Meyerland': {column: 'variableC'},
+        'Westchase': {column: 'variableD'}
+    }, {xAxis: 'Hours', yAxis: 'Meters'});
     chart.bind("#chart-line1");
     chart.render();
 
