--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="sticky-footer-navbar.css" rel="stylesheet">
     <script src="https://d3js.org/d3.v3.js" charset="utf-8"></script>
+     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
     <!--<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>-->
 </head>
 <body>
